--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,17 @@
 *.tar.gz
 *.rar
 
+# Files
+*.swp
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IDE/Build Ignores
+**/.idea/
+.gradle/
+**/out/
+**/target/
+**/build/
+*.iml
+
